# starknet-sdk

./: Cargo.toml  README.md
examples/OracleExample/: Dockerfile  Makefile  README.md  Scarb.toml  measurement.txt
examples/OracleExample/contracts/PriceOracle/: Scarb.toml
examples/OracleExample/contracts/PriceOracle/src/: components.cairo  lib.cairo
examples/OracleExample/contracts/PriceOracle/src/components/: admin.cairo  receiver.cairo
examples/OracleExample/scripts/: create_function.sh  create_routine.sh  deploy.sh  get_functions.rs  get_functions.sh  get_routines.rs  update_container_name.sh  update_push_receiver.sh  update_routine.sh  upgrade.sh
examples/OracleExample/switchboard-function/: Cargo.toml  build.rs  setup.sh
examples/OracleExample/switchboard-function/src/: main.rs  price_oracle.json
examples/OracleExample/switchboard-function/src/exchange_api/: binance.rs  bitfinex.rs  bitstamp.rs  bittrex.rs  coinbase.rs  gateio.rs  huobi.rs  kraken.rs  kucoin.rs  mod.rs  okx.rs  pair.rs  poloniex.rs
rust/switchboard-starknet/: Cargo.toml  Switchboard.json
rust/switchboard-starknet/src/: lib.rs  sdk.rs  utils.rs
rust/switchboard-starknet/src/bindings/: error.rs  mod.rs  switchboard.rs
starknet.js/: LICENSE  README.md  package.json  tsconfig.base.json
starknet.js/scripts/: test.ts
starknet.js/src/: SwitchboardEvent.ts  SwitchboardProgram.ts  error.ts  index.ts  types.ts
starknet.js/src/accounts/: account.ts  attestation_queue.ts  function.ts  index.ts  request.ts  routine.ts  verifier.ts
starknet.js/src/internal/: util.ts
starknet.js/src/util/: getProgramAddress.ts  index.ts
