[package]
name = "switchboard-starknet"
version = "0.3.9"
edition = "2021"
description = "A Rust library to interact with Switchboard on Starknet"
readme = "README.md"
keywords = ["switchboard", "oracle", "evm", "solidity"]
homepage = "https://switchboard.xyz"
repository = "https://github.com/switchboard-xyz/evm-sdk/tree/main/rust/switchboard-evm"
license = "MIT"
include = ["/src", "/Switchboard.json", "/SwitchboardPushReceiver.json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
starknet = { git = "https://github.com/glihm/starknet-rs", branch = "abigen" }
starknet-crypto = { git = "https://github.com/glihm/starknet-rs", branch = "abigen" }
ethers = { version = "2.0.3", features = ["ws", "rustls"] }
quote = "1.0"
Inflector = "0.11"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
serde = "^1"
serde_json = "^1"
rand = "0.8.5"
chrono = "0.4.25"
cron = "0.12.0"
tokio = { version = "1.28.2", features = ["full"] }
switchboard-common = { version = "0.9", path = "../../../sbv3/rust/switchboard-common", features = [
    "client",
] }
sha2 = "0.10.6"
futures = "0.3"
lazy_static = "1.4.0"
sgx-quote = "0.1.0"
